cmake_minimum_required(VERSION 3.26)
project(CPSolutions)

set(CMAKE_CXX_STANDARD 17)

add_executable(MakingGenomeInBerland src/MakingGenomeInBerland.cpp)
add_executable(CycleInMaze2 src/CycleInMaze2.cpp)
add_executable(CycleInMaze src/CycleInMaze.cpp)
add_executable(GenerateAString src/GenerateAString.cpp)
add_executable(MikeAndFeet src/MikeAndFeet.cpp)
