cmake_minimum_required(VERSION 3.26)
project(CPSolutions)

set(CMAKE_CXX_STANDARD 17)

add_executable(MakingGenomeInBerland src/MakingGenomeInBerland.cpp)
add_executable(CountingOutRhyme src/CountingOutRhyme.cpp)
add_executable(Subsequences src/Subsequences.cpp)
add_executable(Thor src/Thor.cpp)
add_executable(CycleInMaze src/CycleInMaze.cpp)
add_executable(GenerateAString src/GenerateAString.cpp)
add_executable(MEXimizeTheScore src/MEXimizeTheScore.cpp)
add_executable(aMAZEing src/aMAZEing.cpp)
add_executable(MikeAndFeet src/MikeAndFeet.cpp)
